--- a/index.html
+++ b/index.html
@@ -1,1 +1,207 @@
-hello
+<!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+<head>
+    <title>PetroPas Well Services</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <!--[if lte IE 8]>
+    <script src="/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="/css/main.css"/>
+    <!--[if lte IE 9]>
+    <link rel="stylesheet" href="/css/ie9.css"/><![endif]-->
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="/css/ie8.css"/><![endif]-->
+</head>
+<body>
+
+<!-- Page Wrapper -->
+<div id="page-wrapper">
+
+    <!-- Header -->
+    <header id="header" class="alt">
+        <h1><a href="index.html">PetroPas</a></h1>
+        <nav>
+            <a href="#menu">Menu</a>
+        </nav>
+    </header>
+
+    <!-- Menu -->
+    <nav id="menu">
+        <div class="inner">
+            <h2>Menu</h2>
+            <ul class="links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="hse.html">HSE</a></li>
+                <li><a href="rd.html">R & D</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+            </ul>
+            <a href="#" class="close">Close</a>
+        </div>
+    </nav>
+
+    <!-- Banner -->
+    <section id="banner">
+        <div class="inner">
+            <div class="logo"><span class="icon fa-ship"></span></div>
+            <h2>PetroPas Well Services</h2>
+
+            <p>A Leading off-shore Well Services Company</p>
+        </div>
+    </section>
+
+    <!-- Wrapper -->
+    <section id="wrapper">
+
+        <!-- One -->
+        <section id="one" class="wrapper spotlight style1">
+            <div class="inner">
+                <a href="aboutus.html" class="image"><img src="images/pic01.jpg" alt=""/></a>
+
+                <div class="content">
+                    <h2 class="major">About Us</h2>
+
+                    <p><strong><em>PetroPas Well Services Corp.</em></strong> provides <strong>drilling rigs</strong>, <strong>service rigs</strong>, and <strong>coil tubing</strong> to established oil and gas producers in Iran. These Oilfield service activities are necessary to complete newly drilled wells and to maintain ongoing servicing of producing wells. Our services are provided through 2 divisions:  Contract Drilling and Production Services.</p>
+                    <a href="aboutus.html" class="special">Learn more</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Two -->
+        <section id="two" class="wrapper alt spotlight style2">
+            <div class="inner">
+                <a href="services.html" class="image"><img src="images/pic02.jpg" alt=""/></a>
+
+                <div class="content">
+                    <h2 class="major">Services</h2>
+
+                    <p>In <strong><em>PetroPas</em></strong>, we provide a range of well services including <strong>Acidzing & Prodcution Enhanacemen</strong>, <strong>Cementing</strong>, <strong>Coiled Tubing</strong>, <strong>Fracturing</strong>, and last but not least <strong>Well Intervention Tools</strong>. Each of these services own their department and respected well-trained crews.</p>
+                    <a href="services.html" class="special">Learn more</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Three -->
+        <section id="three" class="wrapper spotlight style3">
+            <div class="inner">
+                <a href="rd.html" class="image"><img src="images/pic03.jpg" alt=""/></a>
+
+                <div class="content">
+                    <h2 class="major">Research & Development</h2>
+
+                    <p>As a leading company in our industry, We firmly believe that to thrive in this market we need to invest in <strong>R & D</strong>, so we can maintain our technological edge over our competitors. Our <strong>R & D</strong> spans over multiple fields such as <strong>Completion (Oil and Gas Wells)</strong>, <strong>Well Intervention</strong>, and <strong>Workover</strong>. Moreover, We are constantly monitoring the oilfield market to find new oportunities that can benefit us as well as our clients.</p>
+                    <a href="#" class="special">Learn more</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Four -->
+        <section id="four" class="wrapper alt style1">
+            <div class="inner">
+                <h2 class="major">Operation Showcase</h2>
+
+                <p>Being Originally based in Kish Island in the south of Iran, <strong><em>PetroPas Corp.</em></strong> has a huge benefit of having its own warehouse which is near the oilfields. Here is some of our major services.</p>
+                <section class="features">
+                    <article>
+                        <a href="services.html" class="image"><img src="images/pic04.jpg" alt=""/></a>
+                        <h3 class="major">Acidizing & Production Enhancement</h3>
+                        <p>Acidizing and production Enhancement operations increase or restore production in all types of wells</p>
+                        <a href="services.html" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                        <a href="services.html" class="image"><img src="images/pic05.jpg" alt=""/></a>
+                        <h3 class="major">Cementing</h3>
+                        <p>Cementing is one of the most important operations performed on a well in order to complete zonal isolation, aquifer protection, and the structural integrity of the wellbore.</p>
+                        <a href="services.html" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                        <a href="services.html" class="image"><img src="images/pic06.jpg" alt=""/></a>
+                        <h3 class="major">Coiled Tubing</h3>
+                        <p>Coiled Tubing is a continuous length of steel pipe, spooled onto a large diameter reel. Coiled Tubing is commonly used to convey tools, and circulate liquids and gasses into and out of the wellbore without relieving the wellbore pressure.</p>
+                        <a href="services.html" class="special">Learn more</a>
+                    </article>
+
+                    <article>
+                        <a href="services.html" class="image"><img src="images/pic07.jpg" alt=""/></a>
+                        <h3 class="major">Well Intervention</h3>
+                        <p>Well Intervention describes services provided during and after the completion of a well. These services include the stimulation of a targeted area of interval, as well as, the removal of obstruction from the wellbore.</p>
+                        <a href="#" class="special">Learn more</a>
+                    </article>
+                </section>
+                <ul class="actions">
+                    <li><a href="services.html" class="button">Browse All</a></li>
+                </ul>
+            </div>
+        </section>
+
+    </section>
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="inner">
+            <h2 class="major">Get in touch</h2>
+
+            <p>Drop by our offices both in <strong>Tehran</strong> and <strong>Kish</strong>, so we can a have a nice chat accompanied by a hot cup of tea or coffee. Or, You can send us an email or call us.</p>
+
+            <form action="#" onsubmit="return false;">
+                <div class="field">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name"/>
+                </div>
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email"/>
+                </div>
+                <div class="field">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" rows="4"></textarea>
+                </div>
+                <ul class="actions">
+                    <li><input type="submit" value="Send Message"/></li>
+                </ul>
+            </form>
+            <ul class="contact">
+                <li class="fa-home">
+                    PetroPas Corp. <strong>Headquarters</strong><br/>
+                    #7 P.O. Box, #301, Sadaf Tower<br/>
+                    Kish Island, Iran
+                </li>
+
+                <li class="fa-home">
+                    PetroPas Corp. Tehran Office<br/>
+                    #6, 1st floor, #82, Ansari St., Valiasr St.<br/>
+                    Tehran, Iran
+                </li>
+                <li class="fa-phone">+98-21-22059107</li>
+                <li class="fa-envelope"><a href="#">info@petropasco.com</a></li>
+
+            </ul>
+            <ul class="copyright">
+                <li>&copy; PetroPas Corp. All rights reserved.</li>
+                <!--<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+            </ul>
+        </div>
+    </section>
+
+</div>
+
+<!-- Scripts -->
+<script src="/js/skel.min.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.scrollex.min.js"></script>
+<script src="/js/util.js"></script>
+<!--[if lte IE 8]>
+<script src="/js/ie/respond.min.js"></script><![endif]-->
+<script src="/js/main.js"></script>
+
+</body>
+</html>
