remove letter-spacing in the heading

--- a/services.html
+++ b/services.html
@@ -46,6 +46,7 @@
     <section id="wrapper">
         <header>
             <div class="inner">
+                <div class="logo"><img src="/images/logo.png" alt="Petropas Well Services"></div>
                 <h2>Services</h2>
                 <p>We are provider of an expanding range of oil field services form <strong>Fracturing</strong>, <strong>Coiled Tubing</strong> and <strong>Well intervention</strong> to <strong>Acidizing and Production Enhancement</strong>.</p>
             </div>
